# fix8

./: Makefile  Makefile.in  README.md  aclocal.m4  build.sh  config.status  configure  fix8.spec  intermediate_config.h  intermediate_config.h.in  libtool  stamp-h1
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
compiler/: Makefile.in  f8c.cpp
doc/: Makefile.in  fix8.doxygen
doc/man/: f8c.1.xml  seqedit.1.xml
include/fix8/: configuration.hpp  f8config.h  logger.hpp  session.hpp
include/fix8/ff/: allocator.hpp
runtime/: .message.cpp.swp  Makefile.in  configuration.cpp  logger.cpp  message.cpp  session.cpp
schema/: FIX42.xml  FIX42PERF.xml
stocklib/: Makefile  Makefile.in
test/: CMakeLists.txt  FIX44TEST.xml  FIX50SP2.xml.p1  Makefile.am  Makefile.in  coro_hf_client.xml  coro_hf_client_ssl.xml  hf_client_include.xml  hftest.cpp  myfix.cpp  myfix_client.xml  myfix_server.xml
utests/: Makefile.am  Makefile.in
util/: Makefile.in
